Made footer. Provided some fix.

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -308,46 +308,90 @@
                         На сайте MEDIGO размещена информация только о больницах и клиниках, получивших медицинские сертификаты и аккредитацию самых авторитетных международных обществ.
                     </h4>
 
-                    <ul class="section__list">
-                        <li class="section__item">
-                            <span class="section__pic"></span>
-                            <span class="section__description">Care Quality Commision (CQC)</span>
-                        </li>
-                        <li class="section__item">
-                            <span class="section__pic"></span>
-                            <span class="section__description">Care Quality Commision (CQC)</span>
-                        </li>
-                        <li class="section__item">
-                            <span class="section__pic"></span>
-                            <span class="section__description">Care Quality Commision (CQC)</span>
-                        </li>
-                        <li class="section__item">
-                            <span class="section__pic"></span>
-                            <span class="section__description">Care Quality Commision (CQC)</span>
-                        </li>
-                        <li class="section__item">
-                            <span class="section__pic"></span>
-                            <span class="section__description">Care Quality Commision (CQC)</span>
-                        </li>
-                        <li class="section__item">
-                            <span class="section__pic"></span>
-                            <span class="section__description">Care Quality Commision (CQC)</span>
-                        </li>
-                        <li class="section__item">
-                            <span class="section__pic"></span>
-                            <span class="section__description">Care Quality Commision (CQC)</span>
-                        </li>
-                        <li class="section__item">
-                            <span class="section__pic"></span>
-                            <span class="section__description">Care Quality Commision (CQC)</span>
-                        </li>
-                    </ul>
+                    <section class="section__content">
+                        <article class="article article_organization">
+                            <div class="article__pic"></div>
+                            <p class="article__text">Care Quality Commision (CQC)</p>
+                        </article>
+
+                        <article class="article article_organization">
+                            <div class="article__pic"></div>
+                            <p class="article__text">Care Quality Commision (CQC)</p>
+                        </article>
+
+                        <article class="article article_organization">
+                            <div class="article__pic"></div>
+                            <p class="article__text">Care Quality Commision (CQC)</p>
+                        </article>
+
+                        <article class="article article_organization">
+                            <div class="article__pic"></div>
+                            <p class="article__text">Care Quality Commision (CQC)</p>
+                        </article>
+                    </section>
+
+                    <section class="section__content">
+                        <article class="article article_organization">
+                            <div class="article__pic"></div>
+                            <p class="article__text">Care Quality Commision (CQC)</p>
+                        </article>
+
+                        <article class="article article_organization">
+                            <div class="article__pic"></div>
+                            <p class="article__text">Care Quality Commision (CQC)</p>
+                        </article>
+
+                        <article class="article article_organization">
+                            <div class="article__pic"></div>
+                            <p class="article__text">Care Quality Commision (CQC)</p>
+                        </article>
+
+                        <article class="article article_organization">
+                            <div class="article__pic"></div>
+                            <p class="article__text">Care Quality Commision (CQC)</p>
+                        </article>
+                    </section>
+
+                    <!--<ul class="section__list">-->
+                        <!--<li class="section__item">-->
+                            <!--<span class="section__pic"></span>-->
+                            <!--<span class="section__description">Care Quality Commision (CQC)</span>-->
+                        <!--</li>-->
+                        <!--<li class="section__item">-->
+                            <!--<span class="section__pic"></span>-->
+                            <!--<span class="section__description">Care Quality Commision (CQC)</span>-->
+                        <!--</li>-->
+                        <!--<li class="section__item">-->
+                            <!--<span class="section__pic"></span>-->
+                            <!--<span class="section__description">Care Quality Commision (CQC)</span>-->
+                        <!--</li>-->
+                        <!--<li class="section__item">-->
+                            <!--<span class="section__pic"></span>-->
+                            <!--<span class="section__description">Care Quality Commision (CQC)</span>-->
+                        <!--</li>-->
+                        <!--<li class="section__item">-->
+                            <!--<span class="section__pic"></span>-->
+                            <!--<span class="section__description">Care Quality Commision (CQC)</span>-->
+                        <!--</li>-->
+                        <!--<li class="section__item">-->
+                            <!--<span class="section__pic"></span>-->
+                            <!--<span class="section__description">Care Quality Commision (CQC)</span>-->
+                        <!--</li>-->
+                        <!--<li class="section__item">-->
+                            <!--<span class="section__pic"></span>-->
+                            <!--<span class="section__description">Care Quality Commision (CQC)</span>-->
+                        <!--</li>-->
+                        <!--<li class="section__item">-->
+                            <!--<span class="section__pic"></span>-->
+                            <!--<span class="section__description">Care Quality Commision (CQC)</span>-->
+                        <!--</li>-->
+                    <!--</ul>-->
 
                 </div>
             </section>
 
             <section class="section section_patients">
-                <div class="container">
+                <div class="container container_min">
 
                     <h2 class="section__header">MedDia Пациентам</h2>
 
@@ -397,7 +441,7 @@
             </section>
 
             <section class="section section_info">
-                <div class="container">
+                <div class="container container_info">
 
                     <section class="section__content">
                         <h3 class="section__slogan">МedDia работает на прямую с ведущими клиниками.</h3>
@@ -491,19 +535,115 @@
     <footer class="footer">
 
         <section class="footer__content">
+                <section class="footer__info">
 
+                    <div class="footer__logo">
+                        <img src="../../images/home-page/footer__logo.svg" alt="MedDia" class="footer__image">
+                    </div>
 
+                    <!--Fix: make if by mixin but not by nesting-->
+                    <div class="footer__phone">
+                        <h4 class="footer__text">+4675 987 868</h4>
+                    </div>
 
+                    <h3 class="footer__slogan">Вы всегда можетет получить консультацию у наших менеджеров!</h3>
+
+                </section>
+
+                <section class="footer__contacts">
+                    <a href="#" class="footer__link footer__link_email">
+                        НАПИСАТЬ НАМ
+                    </a>
+                    <a href="#" class="footer__link footer__link_vk">
+                        <img src="../../images/home-page/footer__vk.svg" alt="VK" class="footer__image">
+                    </a>
+                    <a href="#" class="footer__link footer__link_fb">
+                        <img src="../../images/home-page/footer__fb.svg" alt="FB" class="footer__image">
+                    </a>
+                </section>
         </section>
 
         <nav class="footer__menu">
+            <div class="footer__content footer__content_justify">
 
+                <ul class="footer__list">
+                    <h4 class="footer__text">О МЕДДИА</h4>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">О компании</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Наша команда</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Как это работает</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Организационный сбор</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Второе мнение</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Блог</a>
+                    </li>
+                </ul>
 
+                <ul class="footer__list">
+                    <h4 class="footer__text">ИСКАТЬ ПО</h4>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Стананам</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Клиникам</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Врачам</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Специальностя</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Стараховкам</a>
+                    </li>
+                </ul>
 
+                <ul class="footer__list">
+                    <h4 class="footer__text">СПЕЦИАЛЬНОСТИ</h4>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Онкология</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Офтальмология</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Стоматология</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Урология</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Гиникология</a>
+                    </li>
+                </ul>
+
+                <ul class="footer__list">
+                    <h4 class="footer__text">АККАУНТ</h4>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Регистрация</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Для пациентов</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Помощь</a>
+                    </li>
+                </ul>
+
+            </div>
         </nav>
 
-        <section class="footer__copyright">
-
+        <section class="footer__copyright footer__content">
+                <p class="footer__text">Our <a href="#" class="footer__link">Privacy Policy</a> and <a href="#" class="footer__link">Terms of Use</a> ©2017 MedDia, Inc.</p>
         </section>
 
     </footer>
